<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bggreen"
    tools:context=".ui.activity.AddcategoryActivity">

    <ImageView
        android:id="@+id/greenbg"
        android:layout_width="743dp"
        android:layout_height="753dp"
        android:layout_marginBottom="256dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dashboardd" />

    <Button
        android:id="@+id/btnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/btngreen"
        android:text="Back"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/greybox"
        android:layout_width="348dp"
        android:layout_height="552dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="144dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/greyrectangele" />

    <TextView
        android:id="@+id/addneeew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="75dp"
        android:text="Add New Category"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/greenbg"
        app:layout_constraintTop_toTopOf="@+id/greybox" />

    <TextView
        android:id="@+id/completee"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:text="Please complete the fields below"
        app:layout_constraintStart_toStartOf="@+id/greenbg"
        app:layout_constraintTop_toBottomOf="@+id/addneeew" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout2"
        android:layout_width="290dp"
        android:layout_height="57dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/categoryname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Category Name" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnaddcategorytt"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/bggreen"
        android:text="Add Category"
        app:layout_constraintStart_toStartOf="@+id/greybox"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:id="@+id/btncancel"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/yellow"
        android:text="Cancel"
        app:layout_constraintEnd_toEndOf="@+id/greybox"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout3"
        android:layout_width="290dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="38dp"
        app:layout_constraintStart_toStartOf="@+id/greybox"
        app:layout_constraintTop_toBottomOf="@+id/completee">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/categoryid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Category Id" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/displaytextcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="364dp"
        android:layout_marginTop="44dp"
        android:text="TextView"
        android:textSize="2sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnaddcategorytt" />

</androidx.constraintlayout.widget.ConstraintLayout>